--- a/index.html
+++ b/index.html
@@ -6,21 +6,32 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-
 </head>
 <body>
     <script src="app.js"></script>
-        <div class="img-loader remove-loader">
+        <!-- <div class="img-loader remove-loader">
             <img src="loader.svg" alt=""/>
-        </div>
+        </div> -->
         <div class="plano">
-            <div class="navbar">
+            <div class="banner">
+                <span></span>
+                <div class="banner-container">
+                    <div class="bottom-banner"></div>
+                    <div class="bottom-counter"></div>
+                </div>
             </div>
-            <div class="social">
+            <div class="content"></div>
+            <div class="menu">
+
+
+
+            </div>
+
+            <!-- <div class="social">
                 <a href="">INSTAGRAM</a>
                 <a href="">FACEBOOK</a>
-                <a href="">WHATSAPP</a>
-            </div>
+                <a href="">WHATSAPP</a>         
+            </div> -->
         </div>
 </body>
 </html>
