--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -22,22 +24,71 @@
                    <div><a></a></div>
                </div>
                <div class="bottom-banner">
-                    <div class="timeline">
+                    <div class="timeline">              
                         <div class="indexation">
-                            <span style="float:left">01</span>
-                            <hr style="float:left;width:30px;background:white;height:3px;bottom:0;position:absolute; bottom:0;">
-                            
+                            <span style="float:left">01 </span>
+                            &nbsp;
+                            &nbsp;
+                            <div style="height:.8vw;width:50px;position:relative;box-sizing:border-box;">
+                                <hr style="height:1px;position:absolute;bottom:30%;width:100%;background-color:rgb(173, 42, 42);border:none;">
+                            </div>
+                            &nbsp;
+                            &nbsp;
+                            <span style="float:left">02 </span>
+                            &nbsp;
+                            &nbsp;
+                            <div style="height:.8vw;width:50px;position:relative;box-sizing:border-box;">
+                                <hr style="height:1px;position:absolute;bottom:30%;width:100%;background-color:rgb(173, 42, 42);border:none;">
+                            </div>
+                            &nbsp;
+                            &nbsp;
+                            <span style="float:left">03 </span>
+                            &nbsp;
+                            &nbsp;
+                            <div style="height:.8vw;width:50px;position:relative;box-sizing:border-box;">
+                                <hr style="height:1px;position:absolute;bottom:30%;width:100%;background-color:rgb(173, 42, 42);border:none;">
+                            </div>
+                            &nbsp;
+                            &nbsp;
+                            <span style="float:left">04 </span>
+                            &nbsp;
+                            &nbsp;
+                            <div style="height:.8vw;width:50px;position:relative;box-sizing:border-box;">
+                                <hr style="height:1px;position:absolute;bottom:30%;width:100%;background-color:rgb(173, 42, 42);border:none;">
+                            </div>
+                            &nbsp;
+                            &nbsp;
+                            <span style="float:left">05 </span>
+                            &nbsp;
+                            &nbsp;
+                            <div style="height:.8vw;width:50px;position:relative;box-sizing:border-box;">
+                                <hr style="height:1px;position:absolute;bottom:30%;width:100%;background-color:rgb(173, 42, 42);border:none;">
+                            </div>
+                            &nbsp;
+                            &nbsp;
+                            <span style="float:left">06 </span>
+                            &nbsp;
+                            &nbsp;
+                            <div style="height:.8vw;width:50px;position:relative;box-sizing:border-box;">
+                                <hr style="height:1px;position:absolute;bottom:30%;width:100%;background-color:rgb(173, 42, 42);border:none;">
+                            </div>
+                            &nbsp;
+                            &nbsp;
+                            <span style="float:left">07</span>
                         </div>
                     </div>
                </div>
             </div>
-            <div class="content"></div>
-            <div class="menu">
-
-
+            <div class="content">
+                <div class="submenu">
+                    <a><span>SIEN INGENIERIA</span></a>
+                    <a><span>SIEN INGENIERIA</span></a>
+                    <a><span>SIEN INGENIERIA</span></a>
+                </div>
+            </div>
+            <div class="menu-ornament">
 
             </div>
-
             <!-- <div class="social">
                 <a href="">INSTAGRAM</a>
                 <a href="">FACEBOOK</a>
